# FrameEngineGamework

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Engine.cpp  Engine.h  GameEngine.cbp  LICENSE  Makefile  README.md  application.cpp  documentation.rtf  mesh.cpp
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: cmake.yml
Bly7/: OBJ_Loader.h
CodeBaseLibrary/: directorysearch.h  logging.h  timer.h  types.cpp
Engine/components/: component.h
OpenAL/: asound.c  config.h  hrtf.c
components/: component.cpp  gameobject.h
data/: default.shader  main.scene  plain.definitions  player.definitions  test.mtl  world.locations
data/barrel/: barrel.definitions
dependencies/CodeBaseLibrary/: random.cpp  random.h  types.h
include/: configuration.h
include/ActorAI/: ActorSystem.h
include/ActorAI/components/: neuron.h
include/Application/: main.h  winproc.h
include/Engine/: Engine.h
include/Engine/UI/: button.h  sprite.h
include/Engine/types/: transform.h  viewport.h
include/GameEngineFramework/: application.cpp  configuration.h  functions.h  plugins.h
include/GameEngineFramework/ActorAI/: ActorStates.h  ActorSystem.h  GeneticPresets.cpp  GeneticPresets.h  Genetics.h  NeuralNetwork.h
include/GameEngineFramework/Application/: ApplicationLayer.h  Platform.h  main.cpp  main.h  procedure.h  winproc.cpp  winproc.h
include/GameEngineFramework/Audio/: AudioSystem.h  SamplePresets.h  StreamParams.h
include/GameEngineFramework/Engine/: ComponentTypes.h  Engine.h  EngineComponents.h  EngineConsole.cpp  EngineSystems.h
include/GameEngineFramework/Input/: InputSystem.cpp  InputSystem.h  keys.h
include/GameEngineFramework/Logging/: Logging.cpp  Logging.h
include/GameEngineFramework/Math/: Math.cpp  Math.h  Random.h
include/GameEngineFramework/MemoryAllocation/: PoolAllocator.h  arenaallocator.h  poolallocator.h
include/GameEngineFramework/Networking/: ClientSocket.h  NetworkSystem.cpp  NetworkSystem.h  ServerSocket.h  SocketServer.h
include/GameEngineFramework/Physics/: Masks.h  PhysicsSystem.cpp  PhysicsSystem.h  Raycast.h
include/GameEngineFramework/Plugins/: ChunkManager.h  plugins.h
include/GameEngineFramework/Profiler/: profiler.cpp  profiler.h
include/GameEngineFramework/Renderer/: RenderSystem.cpp  RenderSystem.h  enumerators.h
include/GameEngineFramework/Resources/: FileLoader.cpp  FileLoader.h  FileSystem.h  ResourceManager.h
include/GameEngineFramework/Scripting/: ScriptSystem.cpp  ScriptSystem.h
include/GameEngineFramework/Serialization/: Serialization.cpp  Serialization.h
include/GameEngineFramework/Timer/: Timer.h  timer.h
include/GameEngineFramework/Transform/: Transform.h
include/GameEngineFramework/Types/: Types.h  types.h
include/GameEngineFramework/UI/: UserInterfaceSystem.h
include/Input/: InputSystem.h
include/Physics/: PhysicsSystem.h
include/Profiler/: profiler.h
include/Scripting/: ScriptSystem.h
source/: application.cpp  application.cpp.save  application.h  configuration.h  configuration.h.save  icon.rc  main.cpp  main.h  plugins.h  winproc.cpp  winproc.h
source/AI/: ActorSystem.cpp  ActorSystem.h  Genetics.cpp  Genetics.h
source/AI/components/: actor.h  (+1 more)
source/Application/: ApplicationLayer.cpp  ApplicationLayer.h  application.h  applicationbase.h  applicationlayer.cpp  applicationlayer.h  applicationlayer.h.save  icon.rc  main.cpp  main.cpp.save  main.h  main.h.save  properties.rc  winproc.cpp  winproc.h
source/Audio/: AudioSystem.cpp  AudioSystem.h
source/Engine/: Engine.cpp  Engine.cpp.save  Engine.h  EngineMain.cpp  EngineMain.h  engine.cpp  engine.h
source/Input/: InputSystem.cpp  InputSystem.h
source/Math/: Math.cpp  Math.h
source/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
source/Renderer/: RenderSystem.cpp  RenderSystem.cpp.save  RenderSystem.h  RenderSystem.h.save  enumerators.h  pipeline.cpp  pipeline.h
source/Resources/: ResourceManager.cpp  ResourceManager.h  plugins.h
source/Scripting/: ScriptSystem.cpp  ScriptSystem.h
source/Serialization/: Serialization.cpp  Serialization.h
source/std/: fileloader.cpp  fileloader.h  logging.cpp  logging.h  poolallocator.h  random.cpp  random.h  strings.cpp  strings.h  timer.cpp  timer.h  types.cpp  types.h
src/: application.cpp  configuration.h  functions.cpp  plugins.cpp  run.cpp  run_vehicle.cpp  shutdown.cpp  start.cpp  start_vehicle.cpp
src/AI/: ActorSystem.h
src/ActorAI/: ActorAnimation.cpp  ActorGenetics.cpp  ActorMechanics.cpp  ActorNeuralNetwork.cpp  ActorNeuralState.cpp  ActorSystem.cpp  ActorTargeting.cpp  ActorUpdate.cpp  GeneticEffectors.cpp  GeneticPresets.cpp  Genetics.cpp  NeuralNetwork.cpp
src/Application/: ApplicationLayer.cpp  Platform.cpp  applicationlayer.h  main.cpp  main.h  procedure.cpp  properties.rc  winproc.cpp  winproc.h
src/Audio/: AudioSystem.cpp  AudioSystem.h  SamplePresets.cpp
src/Engine/: Engine.cpp  Engine.cpp.save-failed  Engine.h  EngineComponents.cpp  EngineConsole.cpp  EngineDeferredDeletion.cpp  EngineGameObjects.cpp  EngineSystems.cpp  EngineUpdate.cpp  EngineUpdateComponentStream.cpp  EngineUpdateStream.cpp  EngineUpdateUI.cpp
src/Input/: InputSystem.cpp  InputSystem.h
src/Logging/: Logging.cpp
src/Math/: Math.cpp  Random.cpp
src/Networking/: ClientSocket.cpp  NetworkSystem.cpp  ServerSocket.cpp  SocketServer.cpp
src/Physics/: PhysicsSystem.cpp
src/Plugins/: plugins.cpp
src/Profiler/: profiler.cpp
src/Renderer/: Pipeline.cpp  Pipeline.cpp.save-failed  RenderSystem.cpp  RenderSystem.h
src/Resources/: FileLoader.cpp  FileSystem.cpp  ResourceManager.cpp
src/Scripting/: ScriptSystem.cpp
src/Serialization/: Serialization.cpp
src/Timer/: Timer.cpp  timer.cpp
src/Transform/: Transform.cpp
src/Types/: Types.cpp
src/UI/: UserInterfaceSystem.cpp
src/tests/: framework.cpp
tests/: applicationTest.cpp  applicationTest.h  framework.cpp  framework.h  unitTest.cpp  unitTest.h
tests/units/: testComponents.cpp  testEngineFunctionality.cpp  testGameObjects.cpp  testPhysicsSystem.cpp  testRenderSystem.cpp  testScriptSystem.cpp  testSerializer.cpp  testTransform.cpp
(+275 files in other folders)
